kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/003_associations_01.kmt
/* $Id: 003_associations_01.kmt,v 1.1 2005-11-23 09:35:27 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* composition multiplicity must be 0..1 or 1*/
class A {
    attribute b : B[1]#owner
}
class B {
    reference owner : A[*]#b // should fail here
}
